--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -7,3 +7,6 @@
 	default = simple
 [core]
 	excludesfile = /Users/brian/.gitignore
+[alias]
+  settomaster = !git fetch upstream && git reset --hard upstream/master
+  delrembrs = !git branch -r --merged | grep origin | grep -v '>' | grep -v master | xargs -L1 | awk '{split($0,a,"/") && print a[2]}' | xargs git push origin —delete
