--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -57,9 +57,14 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# Pre-macOS Sierra clipboard esttings
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Make clipboard work with systtem clipboard as expected
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
 
 # # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
