--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -24,7 +24,7 @@ set-window-option -g window-status-current-bg white
 # Status Bar
 set-option -g status-right " #(battery -t)  #(date '+%b %d - %I:%M') "
 set-option -g status-left-length 50
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 
 # Splits - Keybinding and retain current working directory
 bind-key - split-window -v  -c '#{pane_current_path}'
@@ -55,19 +55,18 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 ##############################################################################
 
 # Use vim keybindings in copy mode
-setw -g mode-keys vi
+# setw -g mode-keys vi
 
 # Pre-macOS Sierra clipboard esttings
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Make clipboard work with systtem clipboard as expected
-set-option -g default-command "reattach-to-user-namespace -l bash"
+# set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
-
