--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -55,18 +55,21 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 ##############################################################################
 
 # Use vim keybindings in copy mode
-# setw -g mode-keys vi
+setw -g mode-keys vi
+
+# Make clipboard work with systtem clipboard as expected
+set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Pre-macOS Sierra clipboard esttings
 # Setup 'v' to begin selection as in Vim
 # bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Make clipboard work with systtem clipboard as expected
-# set-option -g default-command "reattach-to-user-namespace -l bash"
-
-# # Update default binding of `Enter` to also use copy-pipe
+# Update default binding of `Enter` to also use copy-pipe
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# After Sierra
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
