--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -62,14 +62,14 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Pre-macOS Sierra clipboard esttings
 # Setup 'v' to begin selection as in Vim
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # After Sierra
-bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+# bind P paste-buffer
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi y send-keys -X copy-selection
