Fix tmux copy mode

--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -56,9 +56,11 @@ set -g base-index 1
 set -g renumber-windows on
 bind-key b break-pane -d
 
-# vim like copy mode
-setw -g mode-keys vi
-bind -Tcopy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \;
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+# Fix the copy mode clipboard
+# Per: http://squidarth.com/programming/2018/12/14/tmux-linux.html
+
+# For binding 'y' to copy and exiting selection mode
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
+
+# For binding 'Enter' to copy and not leave selection mode
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe 'xclip -sel clip -i' '\;'  send -X clear-selection
