--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -11,9 +11,9 @@ set -g allow-rename off
 set-option -g default-terminal "screen-256color"
 set-option -g status-bg '#005f87'
 set-option -g status-fg '#ffffff'
-set-option -g pane-active-border-fg '#005f87'
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg white
+
+set-option -g pane-active-border-style fg='#005f87'
+set-window-option -g window-status-current-style fg='#005f87',bg=white
 
 # Status Bar
 set-option -g status-right " #(battery -t)  #(date '+%b %d - %I:%M') "
@@ -34,15 +34,15 @@ bind-key r source-file ~/.tmux.conf \; display-message "Settings Reloaded"
 # Vim Navigation Integration - Requires vim-tmux-navigator
 # ( thanks https://github.com/christoomey/ )
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n 'C-h' if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n 'C-j' if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n 'C-k' if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n 'C-l' if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Splits - Keybinding and retain current working directory
 bind-key - split-window -v  -c '#{pane_current_path}'
-bind-key \ split-window -h  -c '#{pane_current_path}'
+bind-key \\ split-window -h  -c '#{pane_current_path}'
 
 # Resize Panes
 bind -n S-Left resize-pane -L 1
