Split zsh vs bash and linux vs macosx

--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -56,11 +56,7 @@ set -g base-index 1
 set -g renumber-windows on
 bind-key b break-pane -d
 
-# Fix the copy mode clipboard
-# Per: http://squidarth.com/programming/2018/12/14/tmux-linux.html
-
-# For binding 'y' to copy and exiting selection mode
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
-
-# For binding 'Enter' to copy and not leave selection mode
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe 'xclip -sel clip -i' '\;'  send -X clear-selection
+###############################################################################
+# OS specific settings
+###############################################################################
+if-shell "uname | grep -q Darwin" "source-file .tmuxrc-macosx" "source-file .tmuxrc-linux"
