--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -59,4 +59,4 @@ bind-key b break-pane -d
 ###############################################################################
 # OS specific settings
 ###############################################################################
-if-shell "uname | grep -q Darwin" "source-file .tmuxrc-macosx" "source-file .tmuxrc-linux"
+if-shell "uname | grep -q Darwin" "source-file ~/.tmuxrc-macosx" "source-file ~/.tmuxrc-linux"
