--- a/config_files/.commonrc
+++ b/config_files/.commonrc
@@ -32,6 +32,7 @@ alias ga.='git add .'
 alias gst='git status'
 alias gc='git commit'
 alias gp='git push'
+alias ga='git add'
 
 
 ###############################################################################
