Refactor to .workrc

--- a/config_files/.commonrc
+++ b/config_files/.commonrc
@@ -76,3 +76,9 @@ fi
 if [[ "$OSTYPE" == "darwin"* ]]; then
   source ~/.commonrc-macos
 fi
+
+
+###############################################################################
+# Works specific
+###############################################################################
+source ~/.workrc
