--- a/config_files/.commonrc
+++ b/config_files/.commonrc
@@ -81,4 +81,6 @@ fi
 ###############################################################################
 # Works specific
 ###############################################################################
-source ~/.workrc
+if [ -f "~/workrc" ]; then
+  source ~/.workrc
+fi
