Add some work aliases

--- a/config_files/.commonrc
+++ b/config_files/.commonrc
@@ -61,6 +61,12 @@ alias eb='ember build'
 
 
 ###############################################################################
+# Docker
+###############################################################################
+alias dc='docker-compose'
+
+
+###############################################################################
 # Path
 ###############################################################################
 export PATH=$PATH:~/code/dotfiles/scripts
