--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -2,7 +2,7 @@
 # Settings
 ###############################################################################
 set -g allow-rename off
-
+set-option -g history-limit 999999
 
 ###############################################################################
 # Apperance
