--- a/config_files/.workrc
+++ b/config_files/.workrc
@@ -8,9 +8,15 @@ then
   export COMPOSE_FILE=./docker-compose.yml:./docker-compose-linux.yml
   alias ecom-log='docker logs -f --tail 1000 zla_ecom-webapp_1'
   alias cg-log='container-log cycle-gear-redline-webapp'
+  alias elts='ecom-load-test-schema'
 fi
 
 if [ -d "$HOME/loyalty-api" ]
 then
   source ~/loyalty-api/scripts/bash_functions.sh
+fi
+
+if [ -d "$HOME/code/comoto/scripts" ]
+then
+  export PATH=$PATH:~/code/comoto/scripts
 fi
