--- a/config_files/.commonrc
+++ b/config_files/.commonrc
@@ -87,6 +87,6 @@ fi
 ###############################################################################
 # Works specific
 ###############################################################################
-if [ -f "~/.workrc" ]; then
+if [ -f "/home/brian/.workrc" ]; then
   source ~/.workrc
 fi
