Add plural log aliases

--- a/config_files/.workrc
+++ b/config_files/.workrc
@@ -7,8 +7,11 @@ then
   source ~/monorepo/zlaverse/support/bash_functions.sh
   export COMPOSE_FILE=./docker-compose.yml:./docker-compose-linux.yml
   alias ecom-log='docker logs -f --tail 1000 zla_ecom-webapp_1'
+  alias ecom-logs='docker logs -f --tail 1000 zla_ecom-webapp_1'
   alias cg-log='container-log cycle-gear-redline-webapp'
+  alias cg-logs='container-log cycle-gear-redline-webapp'
   alias rz-log='container-log revzilla-redline-webapp'
+  alias rz-logs='container-log revzilla-redline-webapp'
   alias elts='ecom-load-test-schema'
 fi
 
