--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -2,7 +2,8 @@
 # Settings
 ###############################################################################
 set -g allow-rename off
-set-option -g history-limit 999999
+set-option -g history-limit 200000
+set-option -g default-shell /bin/bash
 
 ###############################################################################
 # Apperance
