--- a/config_files/.workrc
+++ b/config_files/.workrc
@@ -5,13 +5,19 @@ if [ -d "$HOME/monorepo" ]
 then
   source /usr/share/google-cloud-sdk/completion.bash.inc
   source ~/monorepo/zlaverse/support/bash_functions.sh
-  export COMPOSE_FILE=./docker-compose.yml:./docker-compose-linux.yml
+  # export COMPOSE_FILE=./docker-compose.yml:./docker-compose-linux.yml
   alias ecom-log='docker logs -f --tail 1000 zla_ecom-webapp_1'
   alias ecom-logs='docker logs -f --tail 1000 zla_ecom-webapp_1'
   alias cg-log='container-log cycle-gear-redline-webapp'
   alias cg-logs='container-log cycle-gear-redline-webapp'
   alias rz-log='container-log revzilla-redline-webapp'
   alias rz-logs='container-log revzilla-redline-webapp'
+  alias jp-log='container-log jp-cycles-redline-webapp'
+  alias jp-logs='container-log jp-cycles-redline-webapp'
+  alias p-log='container-log product-service'
+  alias p-logs='container-log product-service'
+  alias ps-log='container-log product-search-service'
+  alias ps-logs='container-log product-search-service'
   alias elts='ecom-load-test-schema'
 fi
 
@@ -20,7 +26,21 @@ then
   source ~/loyalty-api/scripts/bash_functions.sh
 fi
 
+if [ -d "$HOME/product-service" ]
+then
+  source ~/product-service/scripts/bash_functions.sh
+fi
+
+if [ -d "$HOME/product-search-service" ]
+then
+  source ~/product-search-service/scripts/bash_functions.sh
+fi
+
 if [ -d "$HOME/code/comoto/scripts" ]
 then
   export PATH=$PATH:~/code/comoto/scripts
 fi
+
+function gca () {
+    gcloud auth print-access-token | xclip -sel clip; echo "copied to clipboard"
+}
