Update dotfiles for new computer

--- a/config_files/.commonrc
+++ b/config_files/.commonrc
@@ -60,12 +60,6 @@ alias yt='yarn test'
 
 
 ###############################################################################
-# Ember
-###############################################################################
-alias eb='ember build'
-
-
-###############################################################################
 # Docker
 ###############################################################################
 alias dc='docker-compose'
@@ -90,8 +84,8 @@ fi
 
 
 ###############################################################################
-# Works specific
+# Work specific
 ###############################################################################
-if [ -f "/home/brian/.workrc" ]; then
+if [ -d "/home/brian/monorepo" ]; then
   source ~/.workrc
 fi
