--- a/config_files/.workrc
+++ b/config_files/.workrc
@@ -1,13 +1,15 @@
 ################################################################################
 # Specific to work
 ################################################################################
+export COMOTO_PROJECT_ROOT="$HOME"
+
 if [ -d "$HOME/monorepo" ]
 then
   source /usr/share/google-cloud-sdk/completion.bash.inc
   source ~/monorepo/zlaverse/support/bash_functions.sh
   # export COMPOSE_FILE=./docker-compose.yml:./docker-compose-linux.yml
-  alias ecom-log='docker logs -f --tail 1000 zla_ecom-webapp_1'
-  alias ecom-logs='docker logs -f --tail 1000 zla_ecom-webapp_1'
+  alias ecom-log='docker logs -f --tail 1000 zla-ecom-webapp-1'
+  alias ecom-logs='docker logs -f --tail 1000 zla-ecom-webapp-1'
   alias cg-log='container-log cycle-gear-redline-webapp'
   alias cg-logs='container-log cycle-gear-redline-webapp'
   alias rz-log='container-log revzilla-redline-webapp'
@@ -21,25 +23,17 @@ then
   alias elts='ecom-load-test-schema'
 fi
 
-if [ -d "$HOME/loyalty-api" ]
-then
-  source ~/loyalty-api/scripts/bash_functions.sh
-fi
-
-if [ -d "$HOME/product-service" ]
-then
-  source ~/product-service/scripts/bash_functions.sh
-fi
-
-if [ -d "$HOME/product-search-service" ]
-then
-  source ~/product-search-service/scripts/bash_functions.sh
-fi
-
 if [ -d "$HOME/code/comoto/scripts" ]
 then
   export PATH=$PATH:~/code/comoto/scripts
 fi
+
+if [ -d "$HOME/ecom_api" ]
+then
+  source $HOME/ecom_api/scripts/bash_functions.sh
+fi
+
+export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
 function gca () {
     gcloud auth print-access-token | xclip -sel clip; echo "copied to clipboard"
